<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".views.authentication.MobileRegisterFragment">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/logo1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/complete_profile_title"
                android:textColor="@color/blue2"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/complete_profile_subtitle"
                android:textColor="@color/blue2"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/landmark"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/woman"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/unselected_country_background"
                android:elevation="5dp"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintEnd_toStartOf="@id/landmark"
                app:layout_constraintTop_toBottomOf="@id/subtitle"
                app:layout_constraintWidth_percent="0.25">

                <ImageView
                    android:id="@+id/womanCheck"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_uncheck_country" />

                <ImageView
                    android:id="@+id/womanImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/femme"
                    app:tint="@color/grey" />

                <TextView
                    android:id="@+id/womanName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/woman_hint"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/man"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/unselected_country_background"
                android:elevation="5dp"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintStart_toEndOf="@id/landmark"
                app:layout_constraintTop_toBottomOf="@id/subtitle"
                app:layout_constraintWidth_percent="0.25">

                <ImageView
                    android:id="@+id/manCheck"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_uncheck_country" />

                <ImageView
                    android:id="@+id/manImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/homme"
                    app:tint="@color/grey" />

                <TextView
                    android:id="@+id/manName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/man_hint"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/man">

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:drawableStart="@drawable/ic_nom"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/last_name_hint"
                    android:paddingBottom="20dp"
                    android:textSize="14sp"
                    android:theme="@style/editTextTheme" />

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/ic_nom"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/first_name_hint"
                    android:paddingBottom="20dp"
                    android:textSize="14sp"
                    android:theme="@style/editTextTheme" />

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:completionThreshold="0"
                    android:cursorVisible="false"
                    android:drawableStart="@drawable/ic_location"
                    android:drawableEnd="@drawable/ic_arrow"
                    android:drawablePadding="10dp"
                    android:dropDownHeight="300dp"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/country_hint"
                    android:overScrollMode="never"
                    android:paddingBottom="20dp"
                    android:textSize="14sp"
                    android:theme="@style/editTextTheme" />

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:completionThreshold="0"
                    android:cursorVisible="false"
                    android:drawableStart="@drawable/ic_location"
                    android:drawableEnd="@drawable/ic_arrow"
                    android:drawablePadding="10dp"
                    android:dropDownHeight="300dp"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/city_hint"
                    android:overScrollMode="never"
                    android:paddingBottom="20dp"
                    android:textSize="14sp"
                    android:theme="@style/editTextTheme"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/job"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/ic_fonction"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/job_hint"
                    android:paddingBottom="20dp"
                    android:textSize="14sp"
                    android:theme="@style/editTextTheme" />

                <EditText
                    android:id="@+id/company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/ic_entreprise"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/office_name_hint"
                    android:paddingBottom="20dp"
                    android:textSize="14sp"
                    android:theme="@style/editTextTheme" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="20dp"
                    android:textSize="14sp"
                    android:theme="@style/editTextTheme" />

                <TextView
                    android:id="@+id/emailError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/email_error_label"
                    android:textColor="@color/red"
                    android:textSize="10sp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/ic_call"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/phone_number_hint"
                    android:paddingBottom="20dp"
                    android:textSize="14sp"
                    android:theme="@style/editTextTheme"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingStart="-5dp">

                    <CheckBox
                        android:id="@+id/cguCheck"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:buttonTint="@color/blue4"
                        android:checked="false" />

                    <TextView
                        android:id="@+id/cguBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/nextBtn"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginHorizontal="60dp"
                        android:backgroundTint="@color/selector_button_background"
                        android:enabled="false"
                        android:fontFamily="@font/montserrat_semibold"
                        android:text="@string/next_btn_label"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:cornerRadius="7dp"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>